# heimdall

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test-phase0  Dockerfile.test-phase4  README.md  TODO.md  TODO_NOMINATIM_PARITY.md  TODO_REBUILD_MODES.md  TODO_US.md  heimdall.service
.github/workflows/: release.yml
benchmarks/: us-baseline-pre-parity.md  us-baseline-pre-parity.sqlite  us-queries-190-seed42.jsonl
crates/heimdall-api/: Cargo.toml
crates/heimdall-api/src/: admin.rs  auth.rs  fetch.rs  main.rs  manifest.rs  metrics.rs  polygon_output.rs
crates/heimdall-api/tests/: phase0_e2e.sh
crates/heimdall-auth/: Cargo.toml
crates/heimdall-auth/src/: cache.rs  key.rs  lib.rs  limiter.rs  migrate.rs  service.rs  store.rs  tier.rs  usage.rs
crates/heimdall-build/: Cargo.toml
crates/heimdall-build/src/: abr.rs  addr_audit.rs  ads.rs  audit.rs  bag.rs  ban.rs  bdtopo.rs  bench.rs  best.rs  bev.rs  budget.rs  checkpoint.rs  cnefe.rs  dagi.rs  dawa.rs  dvv.rs  enrich.rs  extract.rs  geocache.rs  geonorge.rs  gn250.rs  gnaf.rs  gnis.rs  hud.rs  juso.rs  lantmateriet.rs  linz.rs  lt.rs  lucene.rs  main.rs  nar.rs  oa.rs  osc.rs  pack.rs  pack_addr.rs  package.rs  photon.rs  prg.rs  rebuild.rs  resource_monitor.rs  (+7 more)
crates/heimdall-build/tests/: phase4_e2e.sh
crates/heimdall-compare/: CLAUDE.md  Cargo.toml  README.md
crates/heimdall-compare/src/: conflicts.rs  continuous.rs  db.rs  generate.rs  http.rs  lib.rs  main.rs  report.rs  runner.rs  sampling.rs  types.rs
crates/heimdall-core/: Cargo.toml
crates/heimdall-core/src/: addr_index.rs  addr_store.rs  admin_polygons.rs  class_type.rs  compressed_io.rs  error.rs  global_index.rs  index.rs  lib.rs  ngram.rs  node_cache.rs  record_store.rs  reverse.rs  sidecar_kv.rs  types.rs  wikidata_index.rs  zip_index.rs
crates/heimdall-nn/: Cargo.toml
crates/heimdall-nn/src/: lib.rs
crates/heimdall-normalize/: Cargo.toml
crates/heimdall-normalize/src/: lib.rs
data/: sources.toml
data/normalizers/: am.toml  ar.toml  at.toml  be.toml  bg.toml  bn.toml  br.toml  ch.toml  cz.toml  da.toml  de.toml  dv.toml  dz.toml  ee.toml  el.toml  en-africa.toml  en-au.toml  en-ca.toml  en-caribbean.toml  en-gb.toml  en-nz.toml  en-oceania.toml  en-us.toml  es-latam.toml  es.toml  fa.toml  fi.toml  fr.toml  he.toml  hi.toml  hr.toml  ht.toml  hu.toml  hy.toml  ie.toml  is.toml  it.toml  jp.toml  ka.toml  km.toml  (+26 more)
docs/: global-testing-findings.md  nominatim-compat-features.md
scripts/: swap-fr-and-test.sh  test-france.sh  test-us.sh
