[package]
name = "heimdall-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Hashing
sha2.workspace = true
hmac = "0.12"

# Random
rand = "0.8"
rand_core = "0.6"

# Encoding
base62 = "2"
hex = "0.4"

# Concurrency
arc-swap = "1"
ahash.workspace = true
dashmap = "6"

# Rate limiting (lock-free GCRA)
governor = "0.6"
nonzero_ext = "0.3"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
time = { version = "0.3", features = ["formatting", "macros"] }

# Constant-time comparison
subtle = "2"

# Serde for tier config
serde.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
