[package]
name = "heimdall-compare"
version.workspace = true
edition.workspace = true

[[bin]]
name = "heimdall-compare"
path = "src/main.rs"

[dependencies]
heimdall-core = { path = "../heimdall-core" }
heimdall-normalize = { path = "../heimdall-normalize" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
chrono = "0.4"
toml = "0.8"
